--- a/css/style.css
+++ b/css/style.css
@@ -425,7 +425,6 @@ button:hover {
   border-radius: 4px;
 }
 
-/* Tabla de usuarios */
 .user-table {
   width: 100%;
   border-collapse: collapse;
@@ -440,4 +439,84 @@ button:hover {
 
 .user-table th {
   background-color: #eee;
+}
+
+
+/* Style for the login container */
+.login-container {
+  background-color: #fff;
+  padding: 30px;
+  margin: auto;
+  margin-top: 80px;
+  border-radius: 8px;
+  box-shadow: 0 20px 16px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  max-width: 400px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Title styling */
+.login-container h2 {
+  margin-bottom: 30px;
+  font-size: 24px;
+  color: #333;
+}
+
+/* Form group container */
+.form-group {
+  margin-bottom: 20px;
+  width: 100%;
+}
+
+/* Label for inputs */
+.form-group label {
+  display: block;
+  font-size: 15px;
+  color: #333;
+  margin-bottom: 15px;
+}
+
+/* Input field styling */
+.form-group input {
+  width: 90%;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  font-size: 16px;
+}
+
+.form-group input:focus {
+  border-color: #007bff;
+  outline: none;
+}
+
+/* Button styling */
+.btn {
+  width: 70%;
+  padding: 12px;
+  margin-top: 20px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background-color: #0056b3;
+}
+
+/* Error message */
+.error-message {
+  color: red;
+  margin-bottom: 15px;
+}
+
+form {
+  width: 100%;
 }
