--- a/css/style.css
+++ b/css/style.css
@@ -282,7 +282,7 @@ button:hover {
 
 /* Columna izquierda: Detalles del grupo */
 .details-sidebar {
-  width: 20%;
+  width: 25%;
   border: 1px solid #ccc;
   border-radius: 8px;
   background-color: #fafafa;
@@ -295,18 +295,48 @@ button:hover {
 }
 
 .details-sidebar ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
+  list-style: square;
+  text-align: left;
 }
 
 .details-sidebar li {
   margin-bottom: 0.5rem;
 }
 
+
+.details-container-gastos {
+  display: flex;
+  gap: 11rem;
+  margin-left: 14rem;
+  margin-top: 3rem;
+}
+
+/* Columna izquierda: Detalles del grupo */
+.details-sidebar-gastos {
+  width: 25%;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  background-color: #fafafa;
+  padding: 1rem;
+}
+
+.details-sidebar-gastos h2 {
+  margin-bottom: 1rem;
+  text-align: center;
+}
+
+.details-sidebar-gastos ul {
+  list-style: square;
+  text-align: left;
+}
+
+.details-sidebar-gastos li {
+  margin-bottom: 0.5rem;
+}
+
 /* Columna central: Gráfico */
 .chart-container {
-  width: 50%;        
+  width: 55%;   
   display: flex;
   justify-content: center;
   align-items: center;
@@ -318,16 +348,17 @@ button:hover {
 
 /* Columna derecha: Botones */
 .buttons-sidebar {
-  width: 20%;
+  width: 12%;
+  height: 12%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 1rem;
+  gap: 10px;
   border: 1px solid #ccc;
   border-radius: 8px;
   background-color: #fafafa;
-  padding: 1rem;
+  margin-top: 8%;
 }
 
 .buttons-sidebar button {
@@ -336,13 +367,48 @@ button:hover {
   border: none;
   border-radius: 4px;
   background-color: #4CAF50;
-  color: #fff;
+  color: white;
   cursor: pointer;
   font-weight: bold;
 }
 
 .buttons-sidebar button:hover {
   background-color: #45a049;
+}
+
+/* Style for the selected button */
+.buttons-sidebar button.selected {
+  background-color: #a2a2a2;
+  color: white;
+}
+
+.seccion-container {
+  width: 240px;  
+  height: 500px; 
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  background-color: #fafafa;
+  padding: 1rem;
+}
+
+.seccion-container h3 {
+  margin-bottom: 0.5rem;
+  text-align: center;  
+}
+
+.seccion-container li {
+  font-size: 16px;
+  color: #333;
+  margin: 5px 0;
+}
+
+.seccion-container ul {
+  margin-top: 0;         
+  padding-left: 1.5rem; 
 }
 
 /* ==============================
@@ -477,7 +543,7 @@ button:hover {
   display: block;
   font-size: 15px;
   color: #333;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
 }
 
 /* Input field styling */
