--- a/css/style.css
+++ b/css/style.css
@@ -16,11 +16,22 @@ body {
   color: #333;
 }
 
+.no-grupos {
+  grid-column: 1 / -1;
+  text-align: center; 
+  width: 100%;
+}
+
 .grupo-list {
-  display: flex;
-  gap: 4rem;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  column-gap: 1rem;
+  row-gap: 3.5rem;
+  margin-left: 55px;
   justify-content: center;
-  margin-top: 30px;
+  margin-top: 35px;
+  margin-bottom: 50px;
+
 }
 
 .grupo-item {
@@ -283,10 +294,11 @@ button:hover {
   display: flex;
   gap: 2rem;
   margin: 2rem;
+  margin-bottom: 60px;
 }
 
 .details-header {
-  width: 230px;         
+  width: 252px;         
   height: 50px;      
   background-color: #fafafa;
   border: 1px solid #ccc; 
@@ -310,12 +322,12 @@ button:hover {
 
 /* Columna izquierda: Detalles del grupo */
 .details-sidebar {
-  width: 200px;
-  height: 332px;
+  width: 220px;
+  height: 435px;
   border: 1px solid #ccc;
   border-radius: 8px;
   background-color: #fafafa;
-  padding: 1rem;
+  padding: 0.8rem 1rem 1rem;
 }
 
 .details-sidebar h2 {
@@ -325,19 +337,22 @@ button:hover {
 
 .details-sidebar ul {
   list-style-type: unset;
+  padding-left: 20px;
   text-align: left;
 }
 
 .details-sidebar li {
   margin: 10px 0; 
   color: #333;
+  padding-left: 10px;
 }
 
 .details-container-gastos {
   display: flex;
   gap: 11rem;
-  margin-left: 14rem;
+  margin-left: 17rem;
   margin-top: 3rem;
+  margin-bottom: 50px; 
 }
 
 /* Columna izquierda: Detalles del grupo */
@@ -365,8 +380,8 @@ button:hover {
 
 /* Columna central: Gráfico */
 .chart-container {
-  width: 830px;
-  height: 400px;   
+  width: 810px;
+  height: 500px;   
   display: flex;
   justify-content: center;
   align-items: center;
@@ -374,6 +389,11 @@ button:hover {
   border-radius: 8px;
   background-color: #fafafa;
   padding: 1rem;
+}
+
+.chart-container canvas {
+  transform: scale(0.90);
+  transform-origin: center center;
 }
 
 /* Columna derecha: Botones */
@@ -388,7 +408,7 @@ button:hover {
   border: 1px solid #ccc;
   border-radius: 18px;
   background-color: #fafafa;
-  margin-top: 11%;
+  margin-top: 15%;
 }
 
 .buttons-sidebar button {
@@ -429,8 +449,8 @@ button:hover {
   border: 1px solid #ccc;
   border-radius: 18px;
   background-color: #fafafa;
-  margin-top: 129px;
-  margin-left: 48px;
+  margin-top: 183px;
+  margin-left: 20px;
 }
 
 .buttons-sidebar-gastos button {
@@ -460,7 +480,7 @@ button:hover {
 }
 
 .seccion-container {
-  width: 200px;  
+  width: 240px;  
   height: 500px; 
   display: flex;
   justify-content: flex-start;
@@ -470,18 +490,18 @@ button:hover {
   border-radius: 8px;
   background-color: #fafafa;
   padding: 1rem;
-  margin-left: 50px;
+  margin-left: 0px;
 }
 
 .seccion-container h3 {
   margin-top: 5px;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0;
   text-align: center;  
 }
 
 .seccion-container h3.highlight {
   background-color: #e2e2e2;  
-  width: 175px;
+  width: 225px;
   height: 25px;
   color: #000;          
   padding: 10px;          
@@ -494,14 +514,14 @@ button:hover {
 .seccion-container li {
   font-size: 16px;
   color: #333;
-  margin: 10px 0; 
+  margin: 10px 0;
 }
 
 .seccion-container ul {
-  list-style-position: inside;  /* Маркер будет внутри отступа */
+  list-style-position: inside;
   text-align: left;     
   width: 100%;           
-  padding-left: 35px;
+  padding-left: 20px;
 }
 
 /* ==============================
