--- a/css/style.css
+++ b/css/style.css
@@ -392,8 +392,19 @@ button:hover {
 }
 
 .chart-container canvas {
-  transform: scale(0.90);
   transform-origin: center center;
+  width: 58% !important;
+  height: 90% !important;
+  margin-top: 15px;
+}
+
+.grupo-actions {
+  display: flex;
+  justify-content: right;
+  gap: 10px;
+  margin-right: 20px;
+  margin-bottom: 10px;
+  height: 43px;
 }
 
 /* Columna derecha: Botones */
@@ -858,4 +869,39 @@ main a:hover {
 
 .btn-green:hover {
     background-color: #45a049;
+}
+
+/* Estilos para los modales */
+.modal {
+  display: none; /* Oculto por defecto */
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.55); /* Fondo semi-transparente */
+}
+
+.modal-content {
+  background-color: #fff;
+  margin: 14% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 450px;
+  height: 190px;
+  border-radius: 8px;
+}
+
+.modal .close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.modal .close:hover {
+  color: #000;
 }
