Grupos modificado + formularios nuevos

--- a/css/style.css
+++ b/css/style.css
@@ -731,7 +731,7 @@ main a {
 }
 
 main a:hover {
-  background-color: #45a049;
+  background-color: #979797;
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
 }
 
